@@ -1,6 +1,7 @@
 Kiwix 0.8 rc1
-* high reducing of the xapian index disk usage
-* improvement of the history management
+* High reducing of the xapian index disk usage
+* Improvement of the history management
+* Ignore now, by indexing, HTML pages with the NOINDEX meta tag
 
 Kiwix 0.8 beta5
 * Small improvements of the Spanish translations&shortcuts
